1.2.10: set libraryProject implicitly and TR compat changes, fix #38